grammar.js
  call: ($, argument_list) =>
    seq(
      field("function", $._basic_expression),
      field("arguments", alias(argument_list, $.argument_list))
    ),
  /**
   * @template T
   * @param {GrammarSymbols<T>} $
   * @param {RuleOrLiteral} keyword */
  if: ($, keyword) =>
    seq(keyword, field("condition", $._expression), $._if_body),

  /**
   * @template T
   * @param {GrammarSymbols<T>} $
   * @param {RuleOrLiteral} keyword */
    source_file: $ => optional($._semi_statement_list),
    statement_list: $ =>
      choice($._block_statement_list, $._line_statement_list, $._layout_empty),

    _line_statement_list: $ => prec.right(sep1($._simple_statement, ";")),
    _block_statement_list: $ =>
      seq($._layout_start, optional($._semi_statement_list), $._layout_end),

    _semi_statement_list: $ =>
      repeat1(seq($._statement, choice(";", $._layout_terminator))),

    import_statement: $ => Templates.import($, keyword("import")),
    export_statement: $ => Templates.import($, keyword("export")),
    include_statement: $ => seq(keyword("include"), $.expression_list),
    discard_statement: $ => Templates.return_like($, keyword("discard")),
    import_from_statement: $ =>
      seq(
        // Don't ask me why, but lowering the precedence makes it
        // matches correctly.
        keyword("from", 0),
        field("module", $._expression),
        keyword("import"),
        $.expression_list
      ),

    while: $ =>
      seq(
        keyword("while"),
        field("condition", $._simple_expression),
        ":",
        field("body", $.statement_list)
      ),
    const_section: $ => seq(keyword("const"), $._variable_declaration_section),
    let_section: $ => seq(keyword("let"), $._variable_declaration_section),
    var_section: $ =>
      // Prefer the interpretation of var section over var_type
      prec.dynamic(1, seq(keyword("var"), $._variable_declaration_section)),
    _variable_declaration_section: $ => section($, $.variable_declaration),
    variable_declaration: $ =>
      choice(
        seq(
          $.symbol_declaration_list,
          seq(":", field("type", $.type_expression)),
          optional(seq("=", field("value", $._expression_with_post_block)))
        ),
        seq(
          $.symbol_declaration_list,
          optional(seq("=", field("value", $._expression_with_post_block)))
        )
      ),

    _expression_with_post_block: $ =>
      choice(
        $._expression_with_call_do,
        alias($._call_block, $.call),
        alias($._command_block, $.call),
        alias($._dot_generic_call_block, $.dot_generic_call),
        alias($._infix_extended, $.infix_expression),
        alias($._prefix_extended, $.prefix_expression)
      ),
    _expression: $ =>
      choice(
        $._simple_expression,
        $.proc_expression,
        $.func_expression,
        $.iterator_expression,
        $.block,
        $.if,
        $.when,
        $.case,
        $.try,
        $.for
      ),
    _simple_expression: $ =>
      choice(
        $._simple_expression_command_start,
        alias($._prefix_expression, $.prefix_expression)
      ),
    _basic_expression: $ =>
      choice(
        $._literal,
        $._symbol,
        $.array_construction,
        $.curly_construction,
        $.tuple_construction,
        $.cast,
        $.parenthesized,
        $.dot_expression,
        $.bracket_expression,
        $.curly_expression,
        $.generalized_string,
        $.pragma_expression,
        $.object_type,
        $.tuple_type,
        $.enum_type,
        $.var_type,
        $.out_type,
        $.distinct_type,
        $.ref_type,
        $.pointer_type,
        $.dot_generic_call,
        alias($._proc_type, $.proc_type),
        alias($._iterator_type, $.iterator_type),
        alias($._call_expression, $.call),
        alias($._sigil_expression, $.prefix_expression)
      ),

    /* Structural */
    for: $ =>
      seq(keyword("for"), $._for_body, ":", field("body", $.statement_list)),
    _for_body: $ =>
      seq(
        field("left", $.symbol_declaration_list),
        keyword("in"),
        field("right", $._expression)
      ),
    block: $ =>
      seq(
        keyword("block"),
        optional(field("label", $._symbol)),
        ":",
        field("body", $.statement_list)
      ),
    if: $ => Templates.if($, keyword("if")),
    when: $ => Templates.if($, keyword("when")),
    _if_body: $ =>
      prec.right(
        seq(
          ":",
          field("consequence", $.statement_list),
          optional($._if_alternatives)
        )
      ),
    nil_literal: () => keyword("nil"),

    integer_literal: () =>
      token(seq(NumericLiteral, optional(/'?[iIuU](8|16|32|64)|[uU]/))),

    float_literal: () => {
      const FloatSuffix = /'?[fFdD](32|64|128)?/;

      return token(
        choice(
          seq(NumericLiteral, FloatSuffix),
          seq(DecimalFloatLiteral, optional(FloatSuffix))
        )
      );
    },

    custom_numeric_literal: () =>
      token(seq(choice(NumericLiteral, DecimalFloatLiteral), "'", Identifier)),

    char_literal: $ =>
      seq(
        "'",
        choice(
          alias($._char_escape_sequence, $.escape_sequence),
          alias(token.immediate(prec(2, /[^\\\n\r']/)), $.char_content)
        ),
        token.immediate("'")
      ),
    _char_escape_sequence: () => token.immediate(seq("\\", CharEscapeSequence)),

    escape_sequence: () =>
      token.immediate(
        seq(
          "\\",
          choice(
            CharEscapeSequence,
            /[pP]/,
            /[uU]([0-9a-fA-F]{4}|\{[0-9a-fA-F]+\})/
          )
        )
      ),

    _symbol: $ => choice($.accent_quoted, $.identifier, $.blank_identifier),
    identifier: () => Identifier,

    comment: $ => seq("#", $.comment_content),
  },
});

/**
 * Produce a regex to match nim-style style insensitive identifiers
 *
 * @param {string} ident - The string to match style-insensitively.
 */
function keyword_regex(ident) {
  const regex = ident
    .split("")
    .map((letter, idx) =>
      idx > 0 ? `[${letter.toLowerCase()}${letter.toUpperCase()}]` : letter
    )
    .join("_?");

  return new RegExp(regex);
}

/**
 * Produce a rule to match nim-style style insensitive identifiers
 *
 * @param {string} ident - The string to match style-insensitively.
 * @param {number} [p] - The token precedence.
 */
function keyword(ident, p) {
  return alias(token(prec(p ?? 1, keyword_regex(ident))), ident);
}

/**
 * Produce a rule that matches one or more occurance of a given rule.
 * Each of the rules are separated by the given separator.
 * @param {RuleOrLiteral} rule - The rule to be matched.
 * @param {RuleOrLiteral} sep - The matched separator.
 */
function sep1(rule, sep) {
  return seq(rule, repeat(seq(sep, rule)));
}

/**
 * Produce a rule that matches either in a section or inline.
 *
 * @param {RuleOrLiteral} rule - The rule to be matched.
 */
function section($, rule) {
  return choice(
    rule,
    seq($._layout_start, repeat(seq(rule, $._layout_terminator)), $._layout_end)
  );
}
