corpus/extras.txt
================================================================================
Empty file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Single-line comments
================================================================================

     # mis-aligned comments does not affect indentation

let
  x: int = 10 # doesn't
    # matter

 # at all

  y = 10f

echo x,
  # some comment
  y

## let
##  this
##   that

--------------------------------------------------------------------------------

(source_file
  (comment)
  (let_section
    (variable_declaration
      (identifier)
      (type_identifier)
      (integer_literal))
    (comment)
    (comment)
    (comment)
    (variable_declaration
      (identifier)
      (float_literal)))
  (call
    (identifier)
    (argument_list
      (identifier)
      (comment)
      (identifier)))
  (comment)
  (comment)
  (comment))

================================================================================
Block comments
================================================================================

echo x, #[comment]# y

#[multi-line
comments can be #[nested
#[multiple times]#]#]#

#[random inner comments# stuff#]#

--------------------------------------------------------------------------------

(source_file
  (call
    (identifier)
    (argument_list
      (identifier)
      (comment)
      (identifier)))
  (comment)
  (comment))
